manifests/mariadb.yaml
# ================================================
# Kubernetes Manifest for MariaDB
# Author   : Lumitek
# Date     : 2025-08-15
# Description:
#   This manifest contains the following configurations:
#   - Headless Service to be used with the DNS record
#   - Using the dedicated PVC
# ================================================
---
apiVersion: v1
kind: Service
metadata:
  name: ${MARIADB_SERVICE}
  labels:
    app: cloud
    tier: database
spec:
  ports:
  - port: ${MARIADB_PORT}
    name: mariadb-port
  clusterIP: None
  selector:
    app: cloud
    tier: database
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  serviceName: "mariadb"
  replicas: 1
  selector:
    matchLabels:
      app: cloud
      tier: database
  template:
    metadata:
      labels:
        app: cloud
        tier: database
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.11 # Recommended by Nextcloud
        ports:
        - containerPort: ${MARIADB_PORT}
          name: mariadb-port
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql/
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      selector:
        matchLabels:
          app: cloud
          tier: database
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 550M
---
