manifests/nginx.yaml
# ================================================
# Kubernetes Manifest for Nginx
# Author   : Lumitek
# Date     : 2025-08-15
# Description:
#   This manifest contains the following configurations:
#   - Service for Nginx
#   - The nginx deployment
# ================================================
---
apiVersion: v1
kind: Service
metadata:
  name: ${NGINX_SERVICE}
spec:
  type: ClusterIP
  selector:
    app: cloud
    tier: frontend
  ports:
    - port: 80
      targetPort: ${NGINX_PORT}
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloud
    tier: frontend
  name: ${NGINX_DEPLOYMENT}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud
      tier: frontend
  template:
    metadata:
      labels:
        app: cloud
        tier: frontend
    spec:
      volumes:
      - name: nginx
        configMap:
          name: nginx-config
      - name: web
        persistentVolumeClaim:
          claimName: ${WEBPVC}
      - name: data
        persistentVolumeClaim:
          claimName: ${DATAPVC}
      containers:
      - name: nginx
        image: ${NGINX_IMAGE}
        imagePullPolicy: Always
        ports:
        - containerPort: ${NGINX_PORT}
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          readOnly: true
        - name: nginx
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
        - name: web
          mountPath: "/usr/share/nginx/html"
        - name: data
          mountPath: "/mnt"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      imagePullSecrets:
      - name: ${REGISTRY_CREDENTIALS}
---
