manifests/ingress-tls.yaml
# ================================================
# Kubernetes Manifest for the Ingress
# Author   : Lumitek
# Date     : 2025-08-15
# Description:
#   This manifest contains the following configurations:
#   - HTTPS routing based on the hostname
#   - Redirecting through Nginx service
# ================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
      - ${HOSTNAME}
      secretName: ${TLS_CERTIFICATES}
  ingressClassName: nginx
  rules:
  - host: ${HOSTNAME}
    http:
      paths:
      - backend:
          service:
            name: ${NGINX_SERVICE}
            port:
              number: 80
        path: /
        pathType: Prefix
